--- a/app/views/land/index.html.erb
+++ b/app/views/land/index.html.erb
@@ -54,7 +54,7 @@
                 <h2>Enterate de los eventos de tu barrio antes de llegar a la esquina.</h2>
                 <p>Eventos, promociones, alertas <br /> Todo a tu alcance en un mismo espacio.</p>
 
-                <p><a class="button large white button-on-dark" href=""<% link_to 'Enterate ahora', alerts_path %>>Enterate ahora</a></p>
+                <%= link_to 'Enterate ahora', alerts_path, class: "button large white button-on-dark"  %>
             </div>
 
 </div>
