--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -39,9 +39,6 @@
                   <li class="divider"></li>
                   <%if user_signed_in? %>
                     <li>
-                      <%= link_to  'Users', users_path %>
-                    </li>
-                    <li>
                       <%= link_to  'Alerts', alerts_path %>
                     </li>
                     <li>
@@ -84,7 +81,7 @@
             <div><%= f.label :password_confirmation %><br />
               <%= f.password_field :password_confirmation, autocomplete: "off" %></div>
 
-            <div><%= f.submit "Sign up", class: 'button' %></div>
+            <div><%= f.submit "Sign up", link_to alerts_path, class: 'button' %></div>
           <% end %>
 
           
