--- a/app/views/land/index.html.erb
+++ b/app/views/land/index.html.erb
@@ -2,7 +2,7 @@
     <nav class="top-bar" data-topbar>
         <ul class="title-area">
           <li class="name">
-            <h1><a style="padding-left: 20px; padding-right: 20px;" href="">instantalert</a></h1>
+            <h1><a style="padding-left: 20px; padding-right: 20px;" href="">Instant Alert</a></h1>
           </li>
          
            <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
@@ -35,9 +35,7 @@
               <ul class="left">
                   <li class="divider"></li>
                   <%if user_signed_in? %>
-                    <li>
-                      <%= link_to  'Users', users_path %>
-                    </li>
+                    
                     <li>
                       <%= link_to  'Alerts', alerts_path %>
                     </li>
@@ -54,7 +52,7 @@
                 <h2>Enterate de los eventos de tu barrio antes de llegar a la esquina.</h2>
                 <p>Eventos, promociones, alertas <br /> Todo a tu alcance en un mismo espacio.</p>
 
-                <%= link_to 'Enterate ahora', alerts_path, class: "button large white button-on-dark"  %>
+                <%= link_to 'Enterate ahora', alerts_path, class: "button large white button-on-dark centered"  %>
             </div>
 
 </div>
