--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -81,7 +81,7 @@
             <div><%= f.label :password_confirmation %><br />
               <%= f.password_field :password_confirmation, autocomplete: "off" %></div>
 
-            <div><%= f.submit "Sign up", link_to alerts_path, class: 'button' %></div>
+            <div><%= f.submit "Sign up", class: 'button' %></div>
           <% end %>
 
           
